--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash.snakecase": "^4.0.1"
   },
   "devDependencies": {
+    "coveralls": "^2.11.14",
     "istanbul": "^0.4.4",
     "mocha": "^2.5.3",
     "should": "^9.0.2"
